--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 # Site settings
-title: Freelancer
+title: Ling Qian Portfolio
 email: your-email@domain.com
 url: https://example.github.io
 description: "Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description."
-skills: "Web Developer - Graphic Artist - User Experience Designer"
+skills: "Instructional Designer - Instructional Technologies Specialist - Graphic Designer"
 meta_author: LastName FirstName
 
 # Google webmaster tools
