--- a/_config.yml
+++ b/_config.yml
@@ -24,8 +24,8 @@ disqus_shortname: myshortname
 
 # Color settings (hex-codes without the leading hash-tag)
 color:
-  primary: 18bc9c #80B3FF
-  primary-rgb: "24,288,156" #"128,179,255"
+  primary: 66819C # default: 18bc9c
+  primary-rgb: "102,129,156" # default: 24,288,156
   secondary: 2c3e50 #FD6E8A
   secondary-dark: 233140 #A2122F
 
