--- a/_config.yml
+++ b/_config.yml
@@ -32,7 +32,7 @@ color:
 # Footer settings
 footer:
   copyright: Ling Qian 2017
-  location:  Bloomington IN
+  location:  Location
   social: Around the Web
   credits: Credits
 
