--- a/_config.yml
+++ b/_config.yml
@@ -41,13 +41,13 @@ social:
   - title: linkedin
     url: https://www.linkedin.com/in/ling-qian-ba997b105/
   - title: facebook
-    url:https://www.facebook.com/profile.php?id=100004793224268
+    url: https://www.facebook.com/profile.php?id=100004793224268
   - title: instagram
     url: https://www.instagram.com/qianling79/?hl=en
   - title: twitter
     url: http://twitter.com/lingqian2015
   - title: github
-    url: http://github.com/jekyll
+    url: https://github.com/lingqiann
 
 # Postal address (add as many lines as necessary)
 address:
