--- a/_config.yml
+++ b/_config.yml
@@ -55,7 +55,7 @@ address:
   - line: Bloomington IN,47408
 
 # Credits content
-credits: 'Thanks to IST Department of Indiana University Bloomington and Mr. Tim Whitson.'
+credits: 'Thanks to IST Department of Indiana University Bloomington and Mr. Tim Whitson for technical support.'
 
 # Build settings
 markdown: kramdown
