--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ email: lingqian@iu.edu
 url: http://www.lingqian.me
 description: "My goal is to become an excellent Instructional Technology Consultant in higher education, designing and developing online/hybrid courses and helping instructors reach their potential in teaching. I have extensive knowledge about Instructional Design, adult learning, and cutting-edge learning technologies. Using ADDIE and online learning strategies developed IU online EDGE Career Canvas modules. I have experience in using advanced features of Adobe Creative Suite, including Illustrator, Photoshop developed infographic and conference poster in a professional capacity.  Worked as a Canvas consultant with skills of advising, consulting and coordinating with faculty clients. Experiences of collaborating with SEMs and developers. Experiences in evaluation and needs assessment help me translating client needs into finished productions designed to meet instructional goals. "
 skills: "Instructional Designer - Instructional Technologies Specialist - Graphic Designer"
-meta_author: Ling Qian
+meta_author: "Ling Qian"
 
 # Google webmaster tools
 google_verify:
