--- a/_config.yml
+++ b/_config.yml
@@ -40,7 +40,6 @@ footer:
   copyright: Ling Qian
   location:  Location
   social: Around the Web
-  credits: Credits
 
 # Social networks usernames (many more available: google-plus, flickr, dribbble, pinterest, instagram, tumblr, linkedin, etc.)
 social:
@@ -57,11 +56,8 @@ social:
 
 # Postal address (add as many lines as necessary)
 address:
-  - line: 2001 E. Lingelbach Ln.
-  - line: Bloomington IN, 47408
-
-# Credits content
-credits: 'Thanks to IST Department of Indiana University Bloomington and Mr. Timothy Whitson for technical support.'
+  - line: Indiana University
+  - line: Bloomington, IN
 
 # Build settings
 markdown: kramdown
